--- a/res/layout/activity_about.xml
+++ b/res/layout/activity_about.xml
@@ -33,9 +33,9 @@
 
     <ImageView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="231dp"
         android:contentDescription="@string/app_icon"
-        android:src="@drawable/ic_launcher" />
+        android:src="@drawable/_0211119" />
 
     <TextView
         android:id="@+id/tvAppName"
