--- a/res/menu/action_file.xml
+++ b/res/menu/action_file.xml
@@ -18,7 +18,8 @@
   IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
   CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 -->
-<menu xmlns:android="http://schemas.android.com/apk/res/android" >
+<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android" >
     
     <item
         android:id="@+id/action_share"
@@ -66,5 +67,13 @@
         android:showAsAction="ifRoom"
         android:icon="@drawable/ic_about"
         android:title="@string/file_info"/>
+
+    <item
+        android:id="@+id/action_cancelAll"
+        android:orderInCategory="41"
+        android:title="Cancel All"
+        android:showAsAction="ifRoom"
+        android:visible="true"/>
+
 
 </menu>
